# Laba4_var5_Denis

./: CMakeLists.txt  cmp.cpp  cmp.h  error.h  file_errors.cpp  file_errors.h  input_errors.cpp  input_errors.h  main.cpp  menu.cpp  menu.h  pause.cpp  pause.h  strings.cpp  strings.h  student.cpp  student.h  students_collection.cpp  students_collection.h  students_functions.cpp  students_functions.h  test.txt
