cmake_minimum_required(VERSION 3.22)
project(Laba4_var5_Denis)

set(CMAKE_CXX_STANDARD 14)

add_executable(Laba4_var5_Denis main.cpp input_errors.cpp input_errors.h menu.cpp menu.h cmp.cpp cmp.h error.h file_errors.cpp file_errors.h pause.cpp pause.h strings.cpp strings.h student.cpp student.h students_collection.cpp students_collection.h students_functions.cpp students_functions.h)
